--- a/style.css
+++ b/style.css
@@ -44,3 +44,98 @@ h2{
     inset -3px -3px 5px rgba(0,0,0,0.5);
 
 }
+.box li{
+    position: relative;
+    display:flex;
+    width:calc(100%-40px); 
+    justify-content: space-between; 
+    
+    align-items:center;
+    background : #1f83f2;
+    margin:15px 0;
+    padding : 10px 10px 10px 45px ;
+    cursor : pointer;
+    border-radius : 22.5px; 
+    color:#fff;
+    
+}
+
+.box li i{
+    position:absolute;/*overlap elements*/
+    right:-40px;
+    width:30px;
+    height:30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #ff2c74;
+    border-radius: 50%;
+
+}
+
+.box li i::before{
+    content: "";
+    position: absolute;
+    width: 15px;
+    height: 2px;
+    background: #fff;
+    transform: rotate(45deg);
+}
+
+.box li i::after{
+    content: "";
+    position: absolute;
+    width: 15px;
+    height: 2px;
+    background: #fff;
+    transform: rotate(-45deg);
+
+} 
+
+.box li::before{
+    content: "";
+    position: absolute;
+    left:8px;
+    width: 30px;
+    height: 30px;
+    background: #2f363e;
+    border-radius: 50%;
+}
+
+.box li.done{
+    background: #607d8b;
+   
+}
+
+.box li.done:after{
+    content: "";
+    position: absolute;
+    left:16px;
+    width: 12px;
+    height: 6px;
+    background: #2f363e;
+    border-left: 2px solid #fff;
+    border-bottom: 2px solid #fff;
+    transform: rotate(315deg);
+
+}
+
+#list{
+    position: relative;
+    margin-top: 20px;
+    height: 350px;
+    overflow-y: auto;
+    padding-right: 10px;
+}
+::-webkit-scrollbar-track{
+    box-shadow: inset 0 0 15px rgba(0,0,0,0.5);
+}
+
+::-webkit-scrollbar{
+    width:5px;
+}
+
+::-webkit-scroller-thumb{
+    background: #fff;
+
+}
