--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ h2{
     display:flex;
     width:calc(100%-40px); 
     justify-content: space-between; 
-    
+    min-height:45px;
     align-items:center;
     background : #1f83f2;
     margin:15px 0;
@@ -67,7 +67,7 @@ h2{
     height:30px;
     display: flex;
     justify-content: center;
-    align-items: center;
+    
     background: #ff2c74;
     border-radius: 50%;
 
@@ -127,7 +127,7 @@ h2{
     overflow-y: auto;
     padding-right: 10px;
 }
-::-webkit-scrollbar-track{
+ ::-webkit-scrollbar-track{
     box-shadow: inset 0 0 15px rgba(0,0,0,0.5);
 }
 
@@ -138,4 +138,4 @@ h2{
 ::-webkit-scroller-thumb{
     background: #fff;
 
-}
+} 
