--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ h2{
     display:flex;
     width:calc(100%-40px); 
     justify-content: space-between; 
-    min-height:45px;
+    /* min-height:45px; */
     align-items:center;
     background : #1f83f2;
     margin:15px 0;
@@ -73,14 +73,16 @@ h2{
 
 }
 
-.box li i::before{
+ .box li i::before{
     content: "";
     position: absolute;
-    width: 15px;
+    width: 15px; 
     height: 2px;
     background: #fff;
-    transform: rotate(45deg);
-}
+   
+    
+    transform: rotate(45deg); 
+} 
 
 .box li i::after{
     content: "";
@@ -88,7 +90,7 @@ h2{
     width: 15px;
     height: 2px;
     background: #fff;
-    transform: rotate(-45deg);
+     transform: rotate(-45deg); 
 
 } 
 
@@ -100,7 +102,7 @@ h2{
     height: 30px;
     background: #2f363e;
     border-radius: 50%;
-}
+} 
 
 .box li.done{
     background: #607d8b;
@@ -110,23 +112,24 @@ h2{
 .box li.done:after{
     content: "";
     position: absolute;
-    left:16px;
-    width: 12px;
+     left:16px;
+    width: 12px; 
     height: 6px;
     background: #2f363e;
     border-left: 2px solid #fff;
     border-bottom: 2px solid #fff;
     transform: rotate(315deg);
-
 }
+
+
 
 #list{
     position: relative;
-    margin-top: 20px;
+     margin-top: 20px;
     height: 350px;
-    overflow-y: auto;
-    padding-right: 10px;
-}
+   /* overflow-y: auto; */
+    padding-right: 10px; 
+}*
  ::-webkit-scrollbar-track{
     box-shadow: inset 0 0 15px rgba(0,0,0,0.5);
 }
@@ -138,4 +141,4 @@ h2{
 ::-webkit-scroller-thumb{
     background: #fff;
 
-} 
+}  
