--- a/style.css
+++ b/style.css
@@ -32,7 +32,16 @@ h2{
     font-size:1.75em;
 
 }
+.row{
+    display: flex;
+    align-self: center;
+    justify-content: center;
+    background: #fff;
+    border-radius: 30px;
+    padding-left: 20px;
+    margin-bottom: 25px;
 
+}
 #inputBx{
     position: relative;
    width:90%;
@@ -40,12 +49,27 @@ h2{
     outline:none;
     padding: 15px 20px ;
     margin-left: 0px;
-    border-radius: 30px;
+    border-radius: 30px; 
     font-size: 1em;
-    box-shadow:5px 5px 7px rgba(0,0,0,0.25),
+    flex:1;
+    /* box-shadow:5px 5px 7px rgba(0,0,0,0.25),
     inset 2px 2px 5px rgba(0,0,0,0.5),
-    inset -3px -3px 5px rgba(0,0,0,0.5);
+    inset -3px -3px 5px rgba(0,0,0,0.5); */
 
+}
+.button{
+    box-shadow:5px 5px 7px rgba(0,0,0,0.25);
+     /* inset 2px 2px 5px rgba(0,0,0,0.5),
+    inset -3px -3px 5px rgba(0,0,0,0.5); */
+    width: 80px;
+    background-color: #f54a16;
+    border-radius: 20px;
+    margin-left: 10px;
+    outline: none;
+    border: none;
+    cursor: pointer;
+
+    
 }
 .box li{
     position: relative;
@@ -96,6 +120,7 @@ h2{
     background: #fff;
      transform: rotate(-45deg); 
 
+
 } 
 
 .box li::before{
@@ -111,19 +136,22 @@ h2{
 
 .box li.done{
     background: #607d8b;
+    text-decoration: line-through;
+
    
 }
 
 .box li.done:after{
     content: "";
     position: absolute;
-     left:16px;
+    left:16px; 
     width: 12px; 
     height: 6px;
     background: #2f363e;
     border-left: 2px solid #fff;
     border-bottom: 2px solid #fff;
     transform: rotate(315deg);
+    
 }
 
 
