--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
     height:550px;
     border-radius: 30px;
     background:#3f154e ;
-    padding:30px 50px;
+    padding:30px 50px; 
     box-shadow: 25px 25px 75px rgba(0, 0, 0, 0.25),
     10px 10px 70px rgba(0,0,0,0.25)
     /* inset 5px 5px 10px rgba(0,0,0,0.5) */
@@ -20,8 +20,8 @@ body{
 
     /* inset -5px -5px 15px rgba(0,0,0,0.75) */
     ;
-    align-items: center;
-    justify-items: center;
+    /* align-items: center; */
+    /* justify-items: center; */
 }
 
 h2{
@@ -74,7 +74,7 @@ h2{
 .box li{
     position: relative;
     display:flex;
-    width:90%; 
+    width:70%; 
     /* justify-content: space-between;  */
     /* min-height:45px; */
     align-items:center;
@@ -161,7 +161,7 @@ h2{
      margin-top: 20px;
     height: 350px;
    /* overflow-y: auto; */
-    padding-right: 10px; 
+     padding:10px 0px 10px 10px; 
 }*
  ::-webkit-scrollbar-track{
     box-shadow: inset 0 0 15px rgba(0,0,0,0.5);
