--- a/style.css
+++ b/style.css
@@ -3,8 +3,15 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: #2f363e;
+    background-image: url('background.jpg');
+    
+ 
 }
+
+
+
+
+
 
 .box{
     position: relative;
@@ -12,6 +19,7 @@ body{
     height:550px;
     border-radius: 30px;
     background:#3f154e ;
+    opacity: 0.8;
     padding:30px 50px; 
     box-shadow: 25px 25px 75px rgba(0, 0, 0, 0.25),
     10px 10px 70px rgba(0,0,0,0.25)
@@ -160,7 +168,7 @@ h2{
     position: relative;
      margin-top: 20px;
     height: 350px;
-   /* overflow-y: auto; */
+   overflow-y: auto; 
      padding:10px 0px 10px 10px; 
 }*
  ::-webkit-scrollbar-track{
